Css: apply star animation on layout and fix z-index

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,6 +22,10 @@
   background: $dark !important;
 }
 
+.bg-dark-page {
+  background: $dark-page !important;
+}
+
 .text-dark-primary {
   color: $dark-primary !important;
 }
